﻿Pulse Changelog

Pulse-4.12.1
 * In HeatmapPlotViewModel, fixed InterPlote flag to only change HeatmapPlotSeries.
 * Check _eventWaitData is closed for calling set. 

Pulse-4.12.0
 * In AdcpConfigurationViewModel, pass the deployment duration based off the number of configurations.
 * Changed Deployment Duration from an UInt to a double.
 * Removed the Prediction Model button on the Home page. Use PredictR to reduce the number of prediction models.
 * Removed the Export button on the Home page.  Use the Batch Exporter to reduce the number of exporters.

Pulse-4.11.5
 * In AdcpSubsystemCommands, changed the CepoIndex in the command to a Hex value.

Pulse-4.11.4
 * Updated bug in Prediction Model for Narrowband Max Velocity.

Pulse-4.11.3
 * Update the prediction model for Narrowband Range.

Pulse-4.11.2
 * Fixed bug in DecodeCSHOW with DecodeCWPRT and only 2 parameters.
 * In AdcpSubsystemCommand, increased the number of paramater for CBI from 2 to 3. AdcpSubsystemCommands.CBI_NUM_PARAM
 * Fixed bug in DecodeCSHOW with DecodeCBI() and added the interleave flag.

Pulse-4.11.1
 * Updated Prediction Model System Init Time.

Pulse-4.11.0
 - Updated how the Ensembles are passed to the display.
 - Moved loading data with CreateProject() for playback to PulseManager in NavBarViewModel and SelectPlaybackViewModel.
 - In NmeaDataSet, check for exceptions in SetValue() and SetNmeaStringArray().
 - In SerialOptions, added 57600 baud rate.

Pulse-4.10.1
 - Fixed bug in PD4/5 where the HeaderStart was not locked when clearing the codec.

Pulse-4.10.0
 - Added DataFormatOptions.
 - Added DataFormatView to NavBar.

Pulse-4.9.0
 - In Project view, make the user refresh or generate a missing image instead of doing it automatically.
 - Clean up Export view.
 - In Export, added Screening Options.

Pulse-4.8.1
 - Added tooltips to special BREAK button in terminal and fixed the colors.

Pulse-4.8.0
 - Update Heatmap Plot.
 - Update Mark Bad Below Bottom.

Pulse-4.7.2